# comwidgets

./: CMakeLists.txt  README.md
share/: CMakeLists.txt
share/translations/: idecore_ja_JP.ts  idecore_zh_CN.ts  idecore_zh_TW.ts
src/: CMakeLists.txt  idecoreConfig.cmake.in
src/audio/: CMakeLists.txt
src/framework/: CMakeLists.txt  idecoreframeworkglobal.h
src/framework/core/: initroutine.cpp  initroutine.h
src/framework/dialogs/: plugindialog.cpp  plugindialog.h  settingsdialog.cpp  settingsdialog.h
src/framework/settings/: appearancepage.cpp  appearancepage.h
src/ie/: CMakeLists.txt
src/lyric/: CMakeLists.txt
src/script/: CMakeLists.txt
